# libwave

./: .gitignore  CMakeLists.txt
include/: libwave.hh  libwave.hpp
src/: libwave.cc  libwave.cpp
test/: CmakeLists.txt  main.cc  main.cpp
